--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,8 @@ file.reference.curvesapi-1.06.jar=lib\\poi\\ooxml-lib\\curvesapi-1.06.jar
 file.reference.itext-2.1.7.js4.jar=lib\\jasper\\itext-2.1.7.js4.jar
 file.reference.jasperreports-6.4.3.jar=lib\\jasper\\jasperreports-6.4.3.jar
 file.reference.jasperreports-fonts-6.4.3.jar=lib\\jasper\\jasperreports-fonts-6.4.3.jar
+file.reference.log4j-api-2.13.3.jar=lib\\log4j\\log4j-api-2.13.3.jar
+file.reference.log4j-core-2.13.3.jar=lib\\log4j\\log4j-core-2.13.3.jar
 file.reference.poi-4.1.2.jar=lib\\poi\\poi-4.1.2.jar
 file.reference.poi-ooxml-4.1.2.jar=lib\\poi\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi\\poi-ooxml-schemas-4.1.2.jar
@@ -82,7 +84,9 @@ javac.classpath=\
     ${file.reference.poi-ooxml-4.1.2.jar}:\
     ${file.reference.poi-ooxml-schemas-4.1.2.jar}:\
     ${file.reference.curvesapi-1.06.jar}:\
-    ${file.reference.xmlbeans-3.1.0.jar}
+    ${file.reference.xmlbeans-3.1.0.jar}:\
+    ${file.reference.log4j-api-2.13.3.jar}:\
+    ${file.reference.log4j-core-2.13.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
