--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,6 +41,8 @@ file.reference.commons-collections-3.2.1.jar=lib\\jasper\\commons-collections-3.
 file.reference.commons-collections4-4.4.jar=lib\\poi\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.19.jar=lib\\poi\\commons-compress-1.19.jar
 file.reference.commons-digester-2.1.jar=lib\\jasper\\commons-digester-2.1.jar
+file.reference.commons-fileupload-1.4.jar=lib\\commons-fileupload-1.4.jar
+file.reference.commons-io-2.8.0.jar=lib\\commons-io-2.8.0.jar
 file.reference.commons-lang3-3.8.1.jar=lib\\commons-lang3-3.8.1.jar
 file.reference.commons-logging-1.1.1.jar=lib\\jasper\\commons-logging-1.1.1.jar
 file.reference.curvesapi-1.06.jar=lib\\poi\\ooxml-lib\\curvesapi-1.06.jar
@@ -86,7 +88,9 @@ javac.classpath=\
     ${file.reference.curvesapi-1.06.jar}:\
     ${file.reference.xmlbeans-3.1.0.jar}:\
     ${file.reference.log4j-api-2.13.3.jar}:\
-    ${file.reference.log4j-core-2.13.3.jar}
+    ${file.reference.log4j-core-2.13.3.jar}:\
+    ${file.reference.commons-fileupload-1.4.jar}:\
+    ${file.reference.commons-io-2.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
