--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,6 +51,7 @@ file.reference.jasperreports-6.4.3.jar=lib\\jasper\\jasperreports-6.4.3.jar
 file.reference.jasperreports-fonts-6.4.3.jar=lib\\jasper\\jasperreports-fonts-6.4.3.jar
 file.reference.log4j-api-2.13.3.jar=lib\\log4j\\log4j-api-2.13.3.jar
 file.reference.log4j-core-2.13.3.jar=lib\\log4j\\log4j-core-2.13.3.jar
+file.reference.pdfbox-2.0.21.jar=lib\\pdfbox-2.0.21.jar
 file.reference.poi-4.1.2.jar=lib\\poi\\poi-4.1.2.jar
 file.reference.poi-ooxml-4.1.2.jar=lib\\poi\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi\\poi-ooxml-schemas-4.1.2.jar
@@ -90,7 +91,8 @@ javac.classpath=\
     ${file.reference.log4j-api-2.13.3.jar}:\
     ${file.reference.log4j-core-2.13.3.jar}:\
     ${file.reference.commons-fileupload-1.4.jar}:\
-    ${file.reference.commons-io-2.8.0.jar}
+    ${file.reference.commons-io-2.8.0.jar}:\
+    ${file.reference.pdfbox-2.0.21.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
