--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 endorsed.classpath=
 excludes=
+file.reference.barcode4j.jar=lib\\barcode4j.jar
+file.reference.batik-all-1.14.jar=lib\\batik-all-1.14.jar
 file.reference.commons-beanutils-1.9.0.jar=lib\\jasper\\commons-beanutils-1.9.0.jar
 file.reference.commons-collections-3.2.1.jar=lib\\jasper\\commons-collections-3.2.1.jar
 file.reference.commons-collections4-4.4.jar=lib\\poi\\commons-collections4-4.4.jar
@@ -51,12 +53,16 @@ file.reference.jasperreports-6.4.3.jar=lib\\jasper\\jasperreports-6.4.3.jar
 file.reference.jasperreports-fonts-6.4.3.jar=lib\\jasper\\jasperreports-fonts-6.4.3.jar
 file.reference.log4j-api-2.13.3.jar=lib\\log4j\\log4j-api-2.13.3.jar
 file.reference.log4j-core-2.13.3.jar=lib\\log4j\\log4j-core-2.13.3.jar
+file.reference.org.w3c.dom.smil_1.0.1.v200903091627-4.8.0.jar=lib\\org.w3c.dom.smil_1.0.1.v200903091627-4.8.0.jar
+file.reference.org.w3c.dom.svg-1.1.0.jar=lib\\org.w3c.dom.svg-1.1.0.jar
 file.reference.pdfbox-2.0.21.jar=lib\\pdfbox-2.0.21.jar
 file.reference.poi-4.1.2.jar=lib\\poi\\poi-4.1.2.jar
 file.reference.poi-ooxml-4.1.2.jar=lib\\poi\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi\\poi-ooxml-schemas-4.1.2.jar
 file.reference.primefaces-8.0.jar=lib\\primefaces-8.0.jar
+file.reference.sac-1.3.jar=lib\\sac-1.3.jar
 file.reference.xmlbeans-3.1.0.jar=lib\\poi\\ooxml-lib\\xmlbeans-3.1.0.jar
+file.reference.xmlgraphics-commons-2.6.jar=lib\\xmlgraphics-commons-2.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -92,7 +98,13 @@ javac.classpath=\
     ${file.reference.log4j-core-2.13.3.jar}:\
     ${file.reference.commons-fileupload-1.4.jar}:\
     ${file.reference.commons-io-2.8.0.jar}:\
-    ${file.reference.pdfbox-2.0.21.jar}
+    ${file.reference.pdfbox-2.0.21.jar}:\
+    ${file.reference.barcode4j.jar}:\
+    ${file.reference.org.w3c.dom.svg-1.1.0.jar}:\
+    ${file.reference.batik-all-1.14.jar}:\
+    ${file.reference.org.w3c.dom.smil_1.0.1.v200903091627-4.8.0.jar}:\
+    ${file.reference.sac-1.3.jar}:\
+    ${file.reference.xmlgraphics-commons-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
