--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -104,7 +104,8 @@ javac.classpath=\
     ${file.reference.batik-all-1.14.jar}:\
     ${file.reference.org.w3c.dom.smil_1.0.1.v200903091627-4.8.0.jar}:\
     ${file.reference.sac-1.3.jar}:\
-    ${file.reference.xmlgraphics-commons-2.6.jar}
+    ${file.reference.xmlgraphics-commons-2.6.jar}:\
+    ${libs.restapi.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -134,6 +135,7 @@ lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=JDK_11
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
