--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -61,6 +61,7 @@ file.reference.poi-ooxml-4.1.2.jar=lib\\poi\\poi-ooxml-4.1.2.jar
 file.reference.poi-ooxml-schemas-4.1.2.jar=lib\\poi\\poi-ooxml-schemas-4.1.2.jar
 file.reference.primefaces-8.0.jar=lib\\primefaces-8.0.jar
 file.reference.sac-1.3.jar=lib\\sac-1.3.jar
+file.reference.Spire.Xls.jar=lib\\Spire.Xls.jar
 file.reference.xmlbeans-3.1.0.jar=lib\\poi\\ooxml-lib\\xmlbeans-3.1.0.jar
 file.reference.xmlgraphics-commons-2.6.jar=lib\\xmlgraphics-commons-2.6.jar
 includes=**
@@ -105,7 +106,8 @@ javac.classpath=\
     ${file.reference.org.w3c.dom.smil_1.0.1.v200903091627-4.8.0.jar}:\
     ${file.reference.sac-1.3.jar}:\
     ${file.reference.xmlgraphics-commons-2.6.jar}:\
-    ${libs.restapi.classpath}
+    ${libs.restapi.classpath}:\
+    ${file.reference.Spire.Xls.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
